# hota

./: .gitignore  README.md  SPEC.md  pyproject.toml
hota/: __init__.py
hota/template/: custom.py  dom.py  handler.py  internal.py  utils.py
hotair/: html.py  websocket.py
hotair/template/: __init__.py  custom.py  dom.py  element.py  handler.py  internal.py  node.py  text.py
tests/: index.html  test_websocket.py
