[tool.poetry]
name = "hota"
version = "0.1.0"
description = "HTML Over The Air. Transporting HTML through WebSocket. Inspired by Hotwire."
authors = ["NCPlayz <chowdhurynadir0@outlook.com>"]
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/serviper/hota"
repository = "https://github.com/serviper/hota"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7"
starlette = "^0.14.1"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
lxml = "^4.6.2"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
